5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4083/executions/1706_3039.log
== TEST (2019-04-29 18:23:52) 
-- CODE:
x = int(input("digite o valor de x: "))
a = asin(x)
b = acos(x)
ars = degrees(a)
arc = degrees(b)
if  ((x >= -1 and x < -0.5) or (x > 0.5 and <= 1)):
	  print(round(ars, 2))
		
elif(x >= -0.5 and x <= 0.5):
	  print(round(arc, 2))
		
else:
	 print("entrada invalida")
-- ERROR:
File "XXXX", line 6
    if  ((x >= -1 and x < -0.5) or (x > 0.5 and <= 1)):
                                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:24:56) 
-- CODE:
x = int(input("digite o valor de x: "))
a = asin(x)
b = acos(x)
ars = degrees(a)
arc = degrees(b)
if  ((x >= -1 and x < -0.5) and (x > 0.5 and <= 1)):
	  print(round(ars, 2))
		
elif(x >= -0.5 and x <= 0.5):
	  print(round(arc, 2))
		
else:
	 print("entrada invalida")
-- ERROR:
File "XXXX", line 6
    if  ((x >= -1 and x < -0.5) and (x > 0.5 and <= 1)):
                                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:25:37) 
-- CODE:
x = int(input("digite o valor de x: "))
a = asin(x)
b = acos(x)
ars = degrees(a)
arc = degrees(b)
if  ((x >= -1 and x < -0.5) or (x > 0.5 and x<= 1)):
	  print(round(ars, 2))
		
elif(x >= -0.5 and x <= 0.5):
	  print(round(arc, 2)
		
else:
	 print("entrada invalida")
-- ERROR:
File "XXXX", line 12
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:27:07) 
-- CODE:
x = int(input("digite o valor de x: "))
a = asin(x)
b = acos(x)
ars = degrees(a)
arc = degrees(b)
if((x >= -1 and x < -0.5) or (x > 0.5 and x <= 1)):
	  print(round(ars, 2))
		
elif(x >= -0.5 and x <= 0.5):
	  print(round(arc, 2)
		
else:
	 print("entrada invalida")
-- ERROR:
File "XXXX", line 12
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:27:18) 
-- CODE:
x = int(input("digite o valor de x: "))
a = asin(x)
b = acos(x)
ars = degrees(a)
arc = degrees(b)
if((x >= -1 and x < -0.5) or (x > 0.5 and x <= 1)):
	  print(round(ars, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '-0.99'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:29:07) 
-- CODE:
x = int(input("digite o valor de x: "))
a = asin(x)
b = acos(x)
ars = degrees(a)
arc = degrees(b)
if((x >= -1 and x < -0.5) or (x > 0.5 and x <= 1)):
	  print(round(ars, 2))
		
elif(x >= 0.5 and x <= 0.5):
	 print(round(arc, 2))
		
else:
	 print("entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '-0.99'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:29:10) 
-- CODE:
x = int(input("digite o valor de x: "))
a = asin(x)
b = acos(x)
ars = degrees(a)
arc = degrees(b)
if((x >= -1 and x < -0.5) or (x > 0.5 and x <= 1)):
	  print(round(ars, 2))
		
elif(x >= 0.5 and x <= 0.5):
	 print(round(arc, 2))
		
else:
	 print("entrada invalida")
-- EXECUTION TIME:
0.162538
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1706/3039/main.py", line 1, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '-0.99'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:29:15) 
-- CODE:
x = int(input("digite o valor de x: "))
a = asin(x)
b = acos(x)
ars = degrees(a)
arc = degrees(b)
if((x >= -1 and x < -0.5) or (x > 0.5 and x <= 1)):
	  print(round(ars, 2))
		
elif(x >= 0.5 and x <= 0.5):
	 print(round(arc, 2))
		
else:
	 print("entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '-0.99'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:29:46) 
-- CODE:
x = int(input("digite o valor de x: "))
from math import*
a = asin(x)
b = acos(x)
ars = degrees(a)
arc = degrees(b)
if((x >= -1 and x < -0.5) or (x > 0.5 and x <= 1)):
	  print(round(ars, 2))
		
elif(x >= 0.5 and x <= 0.5):
	 print(round(arc, 2))
		
else:
	 print("entrada invalida")
-- EXECUTION TIME:
0.115109
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1706/3039/main.py", line 1, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '-0.99'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:29:49) 
-- CODE:
x = int(input("digite o valor de x: "))
from math import*
a = asin(x)
b = acos(x)
ars = degrees(a)
arc = degrees(b)
if((x >= -1 and x < -0.5) or (x > 0.5 and x <= 1)):
	  print(round(ars, 2))
		
elif(x >= 0.5 and x <= 0.5):
	 print(round(arc, 2))
		
else:
	 print("entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '-0.99'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:30:14) 
-- CODE:
x = int(input("digite o valor de x: "))
from math import*
a = asin(x)
b = acos(x)
ars = degrees(a)
arc = degrees(b)
if((x >= -1 and x < -0.5) or (x > 0.5 and x <= 1)):
	  print(round(ars, 2))
		
elif(x >= 0.5 and x <= 0.5):
	 print(round(arc, 2))
		
else:
	 print("entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '-0.99'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:31:20) 
-- CODE:
x = float(input("digite o valor de x: "))
from math import*
a = asin(x)
b = acos(x)
ars = degrees(a)
arc = degrees(b)
if((x >= -1 and x < -0.5) or (x > 0.5 and x <= 1)):
	  print(round(ars, 2))
		
elif(x >= 0.5 and x <= 0.5):
	 print(round(arc, 2))
		
else:
	 print("entrada invalida")
-- EXECUTION TIME:
0.124621
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
-81.89
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
digite o valor de x:
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
digite o valor de x: entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:31:22) 
-- CODE:
x = float(input("digite o valor de x: "))
from math import*
a = asin(x)
b = acos(x)
ars = degrees(a)
arc = degrees(b)
if((x >= -1 and x < -0.5) or (x > 0.5 and x <= 1)):
	  print(round(ars, 2))
		
elif(x >= 0.5 and x <= 0.5):
	 print(round(arc, 2))
		
else:
	 print("entrada invalida")
-- OUTPUT:
-81.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:32:38) 
-- CODE:
x = float(input("digite o valor de x: "))
from math import*
a = asin(x)
b = acos(x)
ars = degrees(a)
arc = degrees(b)
if((x > 0.5 and x <= 1)):
	  print(round(ars, 2))
		
elif(x >= 0.5 and x <= 0.5):
	 print(round(arc, 2))
		
else:
	 print("entrada invalida")
-- OUTPUT:
entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:33:51) 
-- CODE:
x = float(input("digite o valor de x: "))
from math import*
a = asin(x)
b = acos(x)
ars = degrees(a)
arc = degrees(b)
if((x >= -1 or x < -0.5) or (x > 0.5 or x <= 1)):
	  print(round(ars, 2))
		
elif(x >= -0.5 or x <= 0.5):
	 print(round(arc, 2))
		
else:
	 print("entrada invalida")
-- OUTPUT:
-81.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:33:55) 
-- CODE:
x = float(input("digite o valor de x: "))
from math import*
a = asin(x)
b = acos(x)
ars = degrees(a)
arc = degrees(b)
if((x >= -1 or x < -0.5) or (x > 0.5 or x <= 1)):
	  print(round(ars, 2))
		
elif(x >= -0.5 or x <= 0.5):
	 print(round(arc, 2))
		
else:
	 print("entrada invalida")
-- EXECUTION TIME:
0.197807
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
-81.89
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:

-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
-12.12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:34:02) 
-- CODE:
x = float(input("digite o valor de x: "))
from math import*
a = asin(x)
b = acos(x)
ars = degrees(a)
arc = degrees(b)
if((x >= -1 or x < -0.5) or (x > 0.5 or x <= 1)):
	  print(round(ars, 2))
		
elif(x >= -0.5 or x <= 0.5):
	 print(round(arc, 2))
		
else:
	 print("entrada invalida")
-- OUTPUT:
-81.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:34:34) 
-- CODE:
x = float(input("digite o valor de x: "))
from math import*
a = asin(x)
b = acos(x)
ars = degrees(a)
arc = degrees(b)
if((x >= -1 or x < -0.5) or (x > 0.5 or x <= 1)):
	  print(round(ars, 2))
		
elif(x >= -0.5 or x <= 0.5):
	 print(round(arc, 2))
		
else:
	 print("entrada invalida")
-- OUTPUT:
-81.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:36:33) 
-- CODE:
x = float(input("digite o valor de x: "))
from math import*
a = asin(x)
b = acos(x)
ars = degrees(a)
arc = degrees(b)
if((x >= -1 or x < -0.5) or (x > 0.5 or x <= 1)):
	  a = asin(x)
		ars=degrees(a)
		print(ars)
		
elif(x >= -0.5 or x <= 0.5):
	 print(round(arc, 2))
		
else:
	 print("entrada invalida")
-- ERROR:
File "XXXX", line 9
    ars=degrees(a)
                 ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:38:15) 
-- CODE:
x = float(input("digite o valor de x: "))
from math import*
a = asin(x)degrees()
b = acos(x)degrees()


if((x >= -1 or x < -0.5) or (x > 0.5 or x <= 1)):
	  print(round(a, 2))
		
elif(x >= -0.5 or x <= 0.5):
	 print(round(b, 2))
		
else:
	 print("entrada invalida")
-- ERROR:
File "XXXX", line 3
    a = asin(x)degrees()
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:38:27) 
-- CODE:
x = float(input("digite o valor de x: "))
from math import*
a = asin(x)
b = acos(x)
ars = degrees(a)
arc = degrees(b)

if((x >= -1 or x < -0.5) or (x > 0.5 or x <= 1)):
	  print(round(ars, 2))
		
elif(x >= -0.5 or x <= 0.5):
	 print(round(arc, 2))
		
else:
	 print("entrada invalida")
-- OUTPUT:
-81.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:39:33) 
-- CODE:
x = float(input("digite o valor de x: "))
from math import*
a = asin(x)
b = acos(x)
ars = degrees(a)
arc = degrees(b)

if(x >= -1 or x < -0.5 or x > 0.5 or x <= 1):
	  print(round(ars, 2))
		
elif(x >= -0.5 or x <= 0.5):
	 print(round(arc, 2))
		
else:
	 print("entrada invalida")
-- OUTPUT:
-81.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:39:44) 
-- CODE:
x = float(input("digite o valor de x: "))
from math import*
a = asin(x)
b = acos(x)
ars = degrees(a)
arc = degrees(b)

if(x >= -1 or x < -0.5 or x > 0.5 or x <= 1):
	  print(round(ars, 2))
		
elif(x >= -0.5 or x <= 0.5):
	 print(round(arc, 2))
		
else:
	 print("entrada invalida")
-- OUTPUT:
-81.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:40:51) 
-- CODE:
x = float(input("digite o valor de x: "))
from math import*
a = asin(x)
b = acos(x)
ars = degrees(a)
arc = degrees(b)

if(x >= -1 or x < -0.5 or x > 0.5 or x <= 1):
	  print(round(ars, 2))
		
elif(x >= -0.5 and x <= 0.5):
	 print(round(arc, 2))
		
else:
	 print("entrada invalida")
-- OUTPUT:
-81.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:41:19) 
-- CODE:
x = float(input("digite o valor de x: "))
from math import*
a = asin(x)
b = acos(x)
ars = degrees(a)
arc = degrees(b)

if(x >= -1 or x < -0.5 or x > 0.5 or x <= 1):
	  print(round(a, 2))
		
elif(x >= -0.5 or x <= 0.5):
	 print(round(arc, 2))
		
else:
	 print("entrada invalida")
-- OUTPUT:
-1.43
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:41:46) 
-- CODE:
x = float(input("digite o valor de x: "))
from math import*
a = asin(x)
b = acos(x)
ars = degrees(a)
arc = degrees(b)

if(x >= -1 or x < -0.5 or x > 0.5 or x <= 1):
	  print(round(ars 2))
		
elif(x >= -0.5 or x <= 0.5):
	 print(round(arc, 2))
		
else:
	 print("entrada invalida")
-- ERROR:
File "XXXX", line 9
    print(round(ars 2))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:41:53) 
-- CODE:
x = float(input("digite o valor de x: "))
from math import*
a = asin(x)
b = acos(x)
ars = degrees(a)
arc = degrees(b)

if(x >= -1 or x < -0.5 or x > 0.5 or x <= 1):
	  print(round(ars, 2))
		
elif(x >= -0.5 or x <= 0.5):
	 print(round(arc, 2))
		
else:
	 print("entrada invalida")
-- OUTPUT:
-81.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:42:44) 
-- CODE:
x = float(input("digite o valor de x: "))
from math import*
a = asin(x)
b = acos(x)
ars = degrees(a)
arc = degrees(b)

if(x >= -1 and x < -0.5 or x > 0.5 and x <= 1):
	  print(round(ars, 2))
		
elif(x >= -0.5 and x <= 0.5):
	 print(round(arc, 2))
		
else:
	 print("entrada invalida")
-- EXECUTION TIME:
0.15604
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
-81.89
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:

-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
102.12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:42:46) 
-- CODE:
x = float(input("digite o valor de x: "))
from math import*
a = asin(x)
b = acos(x)
ars = degrees(a)
arc = degrees(b)

if(x >= -1 and x < -0.5 or x > 0.5 and x <= 1):
	  print(round(ars, 2))
		
elif(x >= -0.5 and x <= 0.5):
	 print(round(arc, 2))
		
else:
	 print("entrada invalida")
-- OUTPUT:
-81.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:43:04) 
-- CODE:
x = float(input("digite o valor de x: "))
from math import*
a = asin(x)
b = acos(x)
ars = degrees(a)
arc = degrees(b)

if(x >= -1 and x < -0.5 or x > 0.5 and x <= 1):
	  print(round(ars, 2))
		
elif(x >= -0.5 and x <= 0.5):
	 print(round(arc, 2))
		
else:
	 print("entrada invalida")
-- OUTPUT:
-81.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:43:38) 
-- CODE:
x = float(input("digite o valor de x: "))
from math import*
a = asin(x)
b = acos(x)
ars = degrees(a)
arc = degrees(b)

if(x >= -1 and x < -0.5 or x > 0.5 and x <= 1):
	  print(round(ars, 2))
		
elif(x >= -0.5 and x <= 0.5):
	 print(round(arc, 2))
		
else:
	 print("entrada invalida")
-- OUTPUT:
-81.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:44:08) 
-- CODE:
x = float(input("digite o valor de x: "))
from math import*
a = asin(x)
b = acos(x)
ars = degrees(a)
arc = degrees(b)

if(x >= -1 and x < -0.5 or x > 0.5 and x <= 1):
	  print(round(ars, 2))
		
elif(x >= -0.5 and x <= 0.5):
	 print(round(arc, 2))
		
else:
	 print("entrada invalida")
-- OUTPUT:
-81.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:44:40) 
-- CODE:
x = float(input("digite o valor de x: "))
from math import*
a = asin(x)
b = acos(x)
ars = degrees(a)
arc = degrees(b)

if(x >= -1 and x < -0.5 or x > 0.5 and x <= 1):
	  print(round(ars, 2))
		
elif(x >= -0.5 and x <= 0.5):
	 print(round(arc, 2))
		
else:
	 print("entrada invalida")
-- OUTPUT:
-81.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:46:44) 
-- CODE:
x = float(input("digite o valor de x: "))
from math import*
if (x <= -1):
      a = asin(x)
      b = acos(x)
      ars = degrees(a)
      arc = degrees(b)
else:
if(x >= -1 and x < -0.5 or x > 0.5 and x <= 1):
	  print(round(ars, 2))
		
elif(x >= -0.5 and x <= 0.5):
	 print(round(arc, 2))
		
else:
	 print("entrada invalida")
-- ERROR:
File "XXXX", line 9
    if(x >= -1 and x < -0.5 or x > 0.5 and x <= 1):
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:47:12) 
-- CODE:
x = float(input("digite o valor de x: "))
from math import*
if (x <= -1):
      a = asin(x)
      b = acos(x)
      ars = degrees(a)
      arc = degrees(b)
else:
   if(x >= -1 and x < -0.5 or x > 0.5 and x <= 1):
	   print(round(ars, 2))
		
   elif(x >= -0.5 and x <= 0.5):
	   print(round(arc, 2))
		
   else:
	   print("entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(ars, 2))
NameError: name 'ars' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:47:16) 
-- CODE:
x = float(input("digite o valor de x: "))
from math import*
if (x <= -1):
      a = asin(x)
      b = acos(x)
      ars = degrees(a)
      arc = degrees(b)
else:
   if(x >= -1 and x < -0.5 or x > 0.5 and x <= 1):
	   print(round(ars, 2))
		
   elif(x >= -0.5 and x <= 0.5):
	   print(round(arc, 2))
		
   else:
	   print("entrada invalida")
-- EXECUTION TIME:
0.194581
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1706/3039/main.py", line 10, in <module>
    print(round(ars, 2))
NameError: name 'ars' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:47:31) 
-- CODE:
x = float(input("digite o valor de x: "))
from math import*
if (x < -1):
      a = asin(x)
      b = acos(x)
      ars = degrees(a)
      arc = degrees(b)
else:
   if(x >= -1 and x < -0.5 or x > 0.5 and x <= 1):
	   print(round(ars, 2))
		
   elif(x >= -0.5 and x <= 0.5):
	   print(round(arc, 2))
		
   else:
	   print("entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(ars, 2))
NameError: name 'ars' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:47:34) 
-- CODE:
x = float(input("digite o valor de x: "))
from math import*
if (x < -1):
      a = asin(x)
      b = acos(x)
      ars = degrees(a)
      arc = degrees(b)
else:
   if(x >= -1 and x < -0.5 or x > 0.5 and x <= 1):
	   print(round(ars, 2))
		
   elif(x >= -0.5 and x <= 0.5):
	   print(round(arc, 2))
		
   else:
	   print("entrada invalida")
-- EXECUTION TIME:
0.126589
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1706/3039/main.py", line 10, in <module>
    print(round(ars, 2))
NameError: name 'ars' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:47:52) 
-- CODE:
x = float(input("digite o valor de x: "))
from math import*
if (x < -1):
      a = asin(x)
      b = acos(x)
      ars = degrees(a)
      arc = degrees(b)
else:
   if(x >= -1 and x < -0.5 or x > 0.5 and x <= 1):
	   print(round(ars, 2))
		
   elif(x >= -0.5 and x <= 0.5):
	   print(round(arc, 2))
		
   else:
	   print("entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(ars, 2))
NameError: name 'ars' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:48:08) 
-- CODE:
x = float(input("digite o valor de x: "))
from math import*
if (x > -1):
      a = asin(x)
      b = acos(x)
      ars = degrees(a)
      arc = degrees(b)
else:
   if(x >= -1 and x < -0.5 or x > 0.5 and x <= 1):
	   print(round(ars, 2))
		
   elif(x >= -0.5 and x <= 0.5):
	   print(round(arc, 2))
		
   else:
	   print("entrada invalida")
-- EXECUTION TIME:
0.170916
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:

-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:

-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:48:11) 
-- CODE:
x = float(input("digite o valor de x: "))
from math import*
if (x > -1):
      a = asin(x)
      b = acos(x)
      ars = degrees(a)
      arc = degrees(b)
else:
   if(x >= -1 and x < -0.5 or x > 0.5 and x <= 1):
	   print(round(ars, 2))
		
   elif(x >= -0.5 and x <= 0.5):
	   print(round(arc, 2))
		
   else:
	   print("entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(ars, 2))
NameError: name 'ars' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:48:22) 
-- CODE:
x = float(input("digite o valor de x: "))
from math import*
if (x > -1):
      a = asin(x)
      b = acos(x)
      ars = degrees(a)
      arc = degrees(b)
else:
   if(x >= -1 and x < -0.5 or x > 0.5 and x <= 1):
	   print(round(ars, 2))
		
   elif(x >= -0.5 and x <= 0.5):
	   print(round(arc, 2))
		
   else:
	   print("entrada invalida")
-- EXECUTION TIME:
0.152998
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:

-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:

-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:49:15) 
-- CODE:
x = float(input("digite o valor de x: "))
from math import*
if (x > -1):
	   a = asin(x)
      b = acos(x)
      ars = degrees(a)
      arc = degrees(b)
else:
   if(x >= -1 and x < -0.5 or x > 0.5 and x <= 1):
	   print(round(ars, 2))
		
   elif(x >= -0.5 and x <= 0.5):
	   print(round(arc, 2))
		
   else:
	   print("entrada invalida")
-- ERROR:
File "XXXX", line 5
    b = acos(x)
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:49:25) 
-- CODE:
x = float(input("digite o valor de x: "))
from math import*
if (x > -1):
      a = asin(x)
      b = acos(x)
      ars = degrees(a)
      arc = degrees(b)
else:
   if(x >= -1 and x < -0.5 or x > 0.5 and x <= 1):
	   print(round(ars, 2))
		
   elif(x >= -0.5 and x <= 0.5):
	   print(round(arc, 2))
		
   else:
	   print("entrada invalida")
-- ERROR:
File "XXXX", line 5
    b = acos(x)
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:50:01) 
-- CODE:
x = float(input("digite o valor de x: "))
from math import*
if (x > -1):
      a = asin(x)
      b = acos(x)
      ars = degrees(a)
      arc = degrees(b)
else:
   if(x >= -1 and x < -0.5 or x > 0.5 and x <= 1):
	   print(round(ars, 2))
		
   elif(x >= -0.5 and x <= 0.5):
	   print(round(arc, 2))
		
   else:
	   print("entrada invalida")
-- ERROR:
File "XXXX", line 5
    b = acos(x)
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:50:13) 
-- CODE:
x = float(input("digite o valor de x: "))
from math import*
if (x >= 0):
      a = asin(x)
      b = acos(x)
      ars = degrees(a)
      arc = degrees(b)
else:
   if(x >= -1 and x < -0.5 or x > 0.5 and x <= 1):
	   print(round(ars, 2))
		
   elif(x >= -0.5 and x <= 0.5):
	   print(round(arc, 2))
		
   else:
	   print("entrada invalida")
-- EXECUTION TIME:
0.196037
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1706/3039/main.py", line 10, in <module>
    print(round(ars, 2))
NameError: name 'ars' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:50:26) 
-- CODE:
x = float(input("digite o valor de x: "))
from math import*
if (x >0):
      a = asin(x)
      b = acos(x)
      ars = degrees(a)
      arc = degrees(b)
else:
   if(x >= -1 and x < -0.5 or x > 0.5 and x <= 1):
	   print(round(ars, 2))
		
   elif(x >= -0.5 and x <= 0.5):
	   print(round(arc, 2))
		
   else:
	   print("entrada invalida")
-- EXECUTION TIME:
0.140013
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1706/3039/main.py", line 10, in <module>
    print(round(ars, 2))
NameError: name 'ars' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:50:43) 
-- CODE:
x = float(input("digite o valor de x: "))
from math import*
if (x > -2):
      a = asin(x)
      b = acos(x)
      ars = degrees(a)
      arc = degrees(b)
else:
   if(x >= -1 and x < -0.5 or x > 0.5 and x <= 1):
	   print(round(ars, 2))
		
   elif(x >= -0.5 and x <= 0.5):
	   print(round(arc, 2))
		
   else:
	   print("entrada invalida")
-- EXECUTION TIME:
0.203823
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:

-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:

-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:50:47) 
-- CODE:
x = float(input("digite o valor de x: "))
from math import*
if (x > -2):
      a = asin(x)
      b = acos(x)
      ars = degrees(a)
      arc = degrees(b)
else:
   if(x >= -1 and x < -0.5 or x > 0.5 and x <= 1):
	   print(round(ars, 2))
		
   elif(x >= -0.5 and x <= 0.5):
	   print(round(arc, 2))
		
   else:
	   print("entrada invalida")
-- ERROR:
File "XXXX", line 5
    b = acos(x)
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:51:00) 
-- CODE:
x = float(input("digite o valor de x: "))
from math import*
if (x > -2):
      a = asin(x)
      b = acos(x)
      ars = degrees(a)
      arc = degrees(b)
else:
   if(x >= -1 and x < -0.5 or x > 0.5 and x <= 1):
	   print(round(ars, 2))
		
   elif(x >= -0.5 and x <= 0.5):
	   print(round(arc, 2))
		
   else:
	   print("entrada invalida")
-- ERROR:
File "XXXX", line 5
    b = acos(x)
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:52:01) 
-- CODE:
x = float(input("digite o valor de x: "))
from math import*
if (x > -2):
      a = asin(x)
      b = acos(x)
      ars = degrees(a)
      arc = degrees(b)
else:
   if(x >= -1 and x < -0.5 or x > 0.5 and x <= 1):
		a = asin(x)
		ars = degrees(a)
	   print(round(ars, 2))
		
   elif(x >= -0.5 and x <= 0.5):
	   print(round(arc, 2))
		
   else:
	   print("entrada invalida")
-- ERROR:
File "XXXX", line 10
    a = asin(x)
              ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:52:21) 
-- CODE:
x = float(input("digite o valor de x: "))
from math import*
if (x > -2):
      a = asin(x)
      b = acos(x)
      ars = degrees(a)
      arc = degrees(b)
else:
   if(x >= -1 and x < -0.5 or x > 0.5 and x <= 1):
		a = asin(x)
      ars = degrees(a)
	   print(round(ars, 2))
		
   elif(x >= -0.5 and x <= 0.5):
	   print(round(arc, 2))
		
   else:
	   print("entrada invalida")
-- ERROR:
File "XXXX", line 10
    a = asin(x)
              ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:52:38) 
-- CODE:
x = float(input("digite o valor de x: "))
from math import*
if (x > -2):
      a = asin(x)
      b = acos(x)
      ars = degrees(a)
      arc = degrees(b)
else:
   if(x >= -1 and x < -0.5 or x > 0.5 and x <= 1):
		a = asin(x)
		ars = degrees(a)
		print(round(ars, 2))
		
   elif(x >= -0.5 and x <= 0.5):
	   print(round(arc, 2))
		
   else:
	   print("entrada invalida")
-- ERROR:
File "XXXX", line 10
    a = asin(x)
              ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:53:55) 
-- CODE:
x = float(input("digite o valor de x: "))
from math import*
if (x > -2):
      a = asin(x)
      b = acos(x)
      ars = degrees(a)
      arc = degrees(b)
else:
   if(x >= -1 and x < -0.5 or x > 0.5 and x <= 1):
		a = asin(x)
		ars = degrees(a)
		print(round(ars, 2))
		
   elif(x >= -0.5 and x <= 0.5):
		b = acos(x)
		arx = degrees(b)
	   print(round(arc, 2))
		
   else:
	   print("entrada invalida")
-- EXECUTION TIME:
0.140999
-- ERROR:
  File "/home/codebench/codes/1706/3039/main.py", line 10
    a = asin(x)
              ^
TabError: inconsistent use of tabs and spaces in indentation

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:53:57) 
-- CODE:
x = float(input("digite o valor de x: "))
from math import*
if (x > -2):
      a = asin(x)
      b = acos(x)
      ars = degrees(a)
      arc = degrees(b)
else:
   if(x >= -1 and x < -0.5 or x > 0.5 and x <= 1):
		a = asin(x)
		ars = degrees(a)
		print(round(ars, 2))
		
   elif(x >= -0.5 and x <= 0.5):
		b = acos(x)
		arx = degrees(b)
	   print(round(arc, 2))
		
   else:
	   print("entrada invalida")
-- ERROR:
File "XXXX", line 10
    a = asin(x)
              ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:54:31) 
-- CODE:
x = float(input("digite o valor de x: "))
from math import*
if (x > -2):
      a = asin(x)
      b = acos(x)
      ars = degrees(a)
      arc = degrees(b)
else:
   if(x >= -1 and x < -0.5 or x > 0.5 and x <= 1):
		from math import*
		a = asin(x)
		ars = degrees(a)
		print(round(ars, 2))
		
   elif(x >= -0.5 and x <= 0.5):
		from math import*
		b = acos(x)
		arx = degrees(b)
	   print(round(arc, 2))
		
   else:
	   print("entrada invalida")
-- ERROR:
File "XXXX", line 10
    from math import*
                    ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:54:57) 
-- CODE:
x = float(input("digite o valor de x: "))
from math import*
if (x > -2):
      a = asin(x)
      b = acos(x)
      ars = degrees(a)
      arc = degrees(b)
else:
   if(x >= -1 and x < -0.5 or x > 0.5 and x <= 1):
		a = asin(x)
		ars = degrees(a)
	   print(round(ars, 2))
		
   elif(x >= -0.5 and x <= 0.5):
	   print(round(arc, 2))
		
   else:
	   print("entrada invalida")
-- ERROR:
File "XXXX", line 10
    a = asin(x)
              ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
